tests/positive/rule1_conversion.safe
-- Test: rule1_conversion
-- Description: Safe integer type conversions between compatible ranges.
--   Demonstrates narrowing at type conversion points, ensuring the
--   source value is within the target type's range.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p130:2289e5b2
-- Expected: ACCEPT

package safe_conversion

   type wide_value is range -1_000_000 to 1_000_000;
   type narrow_value is range -1000 to 1000;
   type positive_value is range 1 to 500;

   --  Clamp_And_Convert: takes a wide value, clamps it to [-1000..1000],
   --  then converts to Narrow_Value. The clamp guarantees the narrowing
   --  check succeeds.
   function clamp_and_convert (v : wide_value) returns narrow_value
      clamped : wide_value;

      if v < -1000
         clamped = -1000;
      else if v > 1000
         clamped = 1000;
      else
         clamped = v;

      --  Narrowing point (conversion): Clamped is in -1000..1000.
      return narrow_value (clamped);

   --  Absolute_To_Positive: converts absolute value when known nonzero.
   function absolute_to_positive (v : narrow_value) returns positive_value

      if v > 0 and then v <= 500
         --  Narrowing point (conversion): V is in 1..500.
         return positive_value (v);
      else if v < 0 and then v >= -500
         --  Narrowing point (conversion): -V is in 1..500.
         return positive_value (-v);
      else
         return 1;

