tests/negative/neg_rule1_narrow_fail.safe
-- Test: neg_rule1_narrow_fail
-- Description: Assignment narrowing that cannot be proven safe.
--   A wide value is assigned to a narrow variable without a guard
--   ensuring it fits the target range.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p127:d5d93439
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p130:2289e5b2
-- Clause: SAFE@468cf72:spec/05-assurance.md#5.3.6.p26:9ca2c786
-- Expected: REJECT narrowing_check_failure

package narrow_fail

   subtype wide is integer (-1_000_000 to 1_000_000)
   subtype narrow is integer (-100 to 100)

   --  Unsafe_Assign: assigns a Wide value directly to a Narrow variable.
   --  The compiler cannot prove that V is in -100..100.
   function unsafe_assign (v : wide; result : out narrow)

      result = narrow (v)  -- ERROR: V may not be in -100..100

